--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,42 +1,61 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <script type="text/javascript" src="cordova-2.7.0.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </body>
+  <head>
+  	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width;" />
+    <title>Photo Finder</title>
+	<script type="text/javascript" src="cordova-2.7.0.js"></script>
+    <script type="text/javascript">
+	document.addEventListener("deviceready",onDeviceReady,false);
+
+    function onDeviceReady() {        
+    	// nothing yet...
+    }
+
+    function capturePhoto() {
+    	navigator.camera.getPicture(onSuccess, onFail, 
+      	{ 
+      		quality: 100, 
+      		targetWidth: 250, 
+      		targetHeight: 250 
+      	}
+      );
+    }
+
+	function getPhoto() {
+	  navigator.camera.getPicture(onSuccess, onFail, 
+	  	{ 
+	  		quality: 100, 
+	  		destinationType: Camera.DestinationType.FILE_URI, 
+	  		sourceType: Camera.PictureSourceType.PHOTOLIBRARY,
+	  		targetWidth: 250,
+	  		targetHeight: 250
+	  	}
+	  );
+	}
+	
+    
+	function onSuccess(imageURI) {
+		console.log("Success");
+	    var image = document.getElementById('image');
+	    image.src = imageURI;
+	    
+	    var msg = document.getElementById('message');
+	    msg.innerHtml = "Image location " + imageURI;
+	}
+	
+	function onFail(message) {
+	  var msg = document.getElementById('message');
+	  msg.innerHtml = message;
+	}
+	
+	</script>
+</head>
+<body>
+
+	<a class="photo" id="cameraPhoto" onClick="capturePhoto();">Take New Photo</a><br />
+    <a class="photo" id="libraryPhoto" onClick="getPhoto()">Select From Library</a><br />
+    <div id="message"></div><br />
+    <img id="image" />
+
+</body>
 </html>
